--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.example.android.smartcookapp"
+        applicationId "com.example.android.smartchefapp"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
